# SwitchboardAdapter

./: Makefile  README.md  build.sc  inConsole.scala
sb_sim/: .gitignore  Doxyfile  README.md  gendocs.sh
sb_sim/include/: memifc.hpp  tilelinklib.h  tilelinklib.hpp
sb_sim/minimal/: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.py  client.cc  settings.py
sb_sim/tlloopback/: .clang-tidy  CMakeLists.txt  Makefile  README.md  build.py  client.cc  settings.py
sb_sim/tlmem/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.py  client.cc  settings.py  vecAdd.elf
src/main/scala/: Bundles.scala  SwitchboardTLAdapter.scala  Top.scala
src/main/scala/example/: Minimal.scala  TLLoopback.scala  TLMem.scala
